# ani2hyprtui

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  pipeline_worker.rs  tui.rs
src/components/: file_browser.rs  hotspot_editor.rs  logs.rs  mapping_editor.rs  mod.rs  preview.rs  runner.rs  settings.rs  symlinks.rs  theme_overrides.rs  theme_writer.rs
src/model/: cursor.rs  mapping.rs  mod.rs  state.rs  theme.rs
src/pipeline/: cursor_io.rs  cursor_types.rs  fs_ops.rs  hyprcursor.rs  mod.rs  pipeline_test.rs  xcursor_gen.rs
src/pipeline/win2xcur/: ani.rs  converter.rs  cur.rs  mod.rs  utils.rs  xcursor_writer.rs
src/pipeline/xcur2png/: extractor.rs  mod.rs  png_writer.rs  xcursor_reader.rs
src/widgets/: common.rs  mod.rs  theme.rs
