[package]
name = "ani2hyprtui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
crossterm = "0.29"
dirs = "6"
image = "0.25"
imageproc = "0.25"
ratatui = { version= "0.29", features = ["all-widgets"] }
ratatui-image = "8.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
walkdir = "2"
xcursor = "0.3"
byteorder = "1"
tempfile = "3"
zip = "6.0.0"
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.0"
textwrap = "0.16.2"
